// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`felaRenderer CSS fallback values are rendered 1`] = `
".a {
  color: red;
  color: blue;
}


<div class=\\"a\\"></div>"
`;

exports[`felaRenderer animations are not applied if animations are disabled 1`] = `
"

<div class=\\"\\"></div>"
`;

exports[`felaRenderer array returned by keyframe results in CSS fallback values 1`] = `
"@-webkit-keyframes k1 {
  0% {
    color: blue;
    color: red;
    color: yellow;
  }
  100% {
    color: blue;
    color: red;
    color: yellow;
  }
}
@-moz-keyframes k1 {
  0% {
    color: blue;
    color: red;
    color: yellow;
  }
  100% {
    color: blue;
    color: red;
    color: yellow;
  }
}
@keyframes k1 {
  0% {
    color: blue;
    color: red;
    color: yellow;
  }
  100% {
    color: blue;
    color: red;
    color: yellow;
  }
}
.a {
  -webkit-animation-name: k1;
  animation-name: k1;
}


<div class=\\"a\\"></div>"
`;

exports[`felaRenderer basic styles are rendered 1`] = `
".a {
  color: red;
}


<div class=\\"a\\"></div>"
`;

exports[`felaRenderer keyframe colors are rendered 1`] = `
"@-webkit-keyframes k1 {
  from {
    color: red;
  }
  to {
    color: blue;
  }
}
@-moz-keyframes k1 {
  from {
    color: red;
  }
  to {
    color: blue;
  }
}
@keyframes k1 {
  from {
    color: red;
  }
  to {
    color: blue;
  }
}
.a {
  -webkit-animation-name: k1;
  animation-name: k1;
}
.b {
  -webkit-animation-duration: 5s;
  animation-duration: 5s;
}


<div class=\\"a b\\"></div>"
`;

exports[`felaRenderer marginLeft is rendered into marginLeft due to RTL with \`noFlip\` 1`] = `
".a {
  margin-left: 10px;
}


<div class=\\"a\\"></div>"
`;

exports[`felaRenderer marginLeft is rendered into marginRight due to RTL 1`] = `
".a {
  margin-right: 10px;
}


<div class=\\"a\\"></div>"
`;

exports[`felaRenderer prefixes required styles 1`] = `
".a {
  cursor: -webkit-zoom-in;
  cursor: -moz-zoom-in;
  cursor: zoom-in;
}
.b {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
.c {
  -webkit-filter: blur(5px);
  filter: blur(5px);
}
.d {
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
}
.e {
  position: -webkit-sticky;
  position: sticky;
}
.f {
  -webkit-transition: width 2s, height 2s, background-color 2s,
    -webkit-transform 2s;
  -webkit-transition: width 2s, height 2s, background-color 2s, transform 2s;
  transition: width 2s, height 2s, background-color 2s, transform 2s;
}
.g:hover {
  background-image: -webkit-image-set(\\"cat.png\\" 1x, \\"cat-2x.png\\" 2x);
  background-image: image-set(\\"cat.png\\" 1x, \\"cat-2x.png\\" 2x);
}
.h:hover {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}
.i:hover {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}


<div class=\\"a b c d e f g h i\\"></div>"
`;

exports[`felaRenderer styles are expanded to longhand values 1`] = `
".a {
  border-top-style: solid;
}
.b {
  border-left-style: solid;
}
.c {
  border-bottom-style: solid;
}
.d {
  border-right-style: solid;
}
.e {
  border-top-color: rgba(51, 204, 51, 1);
}
.f {
  border-left-color: rgba(51, 0, 204, 1);
}
.g {
  border-bottom-color: rgba(51, 204, 51, 1);
}
.h {
  border-right-color: rgba(51, 0, 204, 1);
}


<div class=\\"a b c d e f g h\\"></div>"
`;
